# wd2duckdb

./: .gitignore  Cargo.toml  README.md  output.duckdb
.github/workflows/: publish.yml
src/: id.rs  main.rs  my_reader.rs  value.rs
wikidata-rs/: Cargo.toml  README.md
wikidata-rs/src/: dtype.rs  id.rs  lib.rs  value.rs
