[package]
name = "wd2duckdb"
version = "0.0.1"
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
description = "Transform a Wikidata JSON dump into an DuckDB database"
repository = "https://github.com/angelip2303/wd2duckdb"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"
keywords = ["wikidata", "duckdb", "json", "dump", "database"]
categories = ["algorithms", "database", "mathematics", "science"]

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
duckdb = { version = "0.7.1", features = ["bundled", "chrono", "r2d2"] }
humantime = "2.1.0"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
rayon = "1.7"
simd-json = "0.7.0"
wikidata = "0.3.0"
