[package]
name = "wikidata-rs"
version = "0.0.3"
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
description = "Utilities for working with Wikidata entities programmatically"
repository = "https://github.com/angelip2303/wd2duckdb"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"
keywords = ["wikidata", "duckdb", "json", "dump", "database"]
categories = ["algorithms", "database", "mathematics", "science"]

[dependencies]
duckdb = { version = "0.7.1", features = ["chrono"] }
chrono = "0.4.23"
lazy_static = "1.4.0"
wikidata = "0.3.0"
polars = { version = "0.30.0", features = ["lazy", "dtype-u8"]}
strum = "0.24.1"
strum_macros = "0.24"